# yafra-rust

./: Cargo.toml  README.md  build-init.sh  build-init.sql
cli-ratatui/: Cargo.toml  README.md
cli-ratatui/src/: main.rs
